fix: Исправления
##
Добавлено описание причин ошибок при парсинге номера
#
В Country добавлены поля: defaultPhoneCode, phoneMask, name
#